add CSS CSS elements to the paragraph

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,4 +5,11 @@ h1 {
 }
 
 
+p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: black;
+  font-size: medium;
+  line-height: 40px;
+}
+
 
