add background colour

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,16 @@
+body {
+  background-color:lightyellow ;
+}
+
+
+
+
 h1 {
   color: lightblue;
   text-align: center;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
 
 
 p {
