--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,7 +6,7 @@ body {
 
 
 h1 {
-  color: lightblue;
+  color: rgb(213, 242, 252);
   text-align: center;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
