--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,4 +22,13 @@ p {
   line-height: 40px;
 }
 
+.About-Me {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font size: large;
+  line-height: 60px;
+  border: 2px
+ 
+  
+}
+
 
