--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color:rgb(255, 255, 244) ;
+  background-color: whitesmoke ;
 }
 
 
@@ -16,7 +16,7 @@ h1 {
 
 
 p {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: black;
   font-size: medium;
   line-height: 40px;
@@ -27,8 +27,15 @@ p {
   font size: large;
   line-height: 60px;
   border: 2px
- 
   
 }
 
+.projects2 {
+  font-size: larger;
+}
+
+.first-week {
+  font-size: small;
+
+}
 
